--- a/src/global.scss
+++ b/src/global.scss
@@ -36,13 +36,13 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 
-// .div_wrap_full_width_center {
-//     display: flex;
-//     justify-content: center; 
-//     align-items: center;     
-//     height: 100vh;
-//     width: 100%;
-// }
+.div_wrap_full_width_center {
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    height: 80vh;
+    width: 100%;
+}
 
 .div_login_form {
     width: 350px;
