Update product details & cart

--- a/src/global.scss
+++ b/src/global.scss
@@ -100,7 +100,13 @@
     float: right;
 }
 
+.ion_icon_star {
+    color: rgb(255, 230, 0)
+}
 
+.button_buy_100vw {
+    width: 100%;
+}
 
 
 /* Hide the element by default (for mobile devices) */
