--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -15,9 +15,10 @@
     </ion-card-header>
     <ion-card-content>
       <p><strong>Price:</strong> ${{ product.price }}</p>
-      <p><strong>Rating:</strong> {{ product.rating.rate }} / 5 ({{ product.rating.count }} reviews)</p>
+      <p><strong>Rating:</strong> &nbsp; <ion-icon name="star" class="ion_icon_star"></ion-icon> {{ product.rating.rate }} / 5 ({{ product.rating.count }} reviews)</p>
       <p class="padding_bottom_10"><strong>Description:</strong> {{ product.description }}</p>
       <ion-img [src]="product.image"></ion-img>
+      <ion-button (click)="addToCart(product); dismiss();" color="success" class="button_buy_100vw">Buy</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
